--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,13 +1,13 @@
 <h1>Football News</h1>
 
 <h5>NPM: </h5>
-<p>{{ 2406407594 }}</p>
+<p>{{ npm }}</p>
 
 <h5>Name:</h5>
-<p>{{ Nalakrishna }}</p>
+<p>{{ name }}</p>
 
 <h5>Class:</h5>
-<p>{{ F }}</p>
+<p>{{ class }}</p>
 
 <a href="{% url 'main:create_news' %}">
   <button>+ Add News</button>
