--- a/main/templates/news_detail.html
+++ b/main/templates/news_detail.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+
 {% block content %}
 <p><a href="{% url 'main:show_main' %}"><button>← Back to News List</button></a></p>
 
@@ -14,5 +14,11 @@
 {% endif %}
 
 <p>{{ news.content }}</p>
+
+{% if news.user %}
+    <p>Author: {{ news.user.username }}</p>
+{% else %}
+    <p>Author: Anonymous</p>
+{% endif %}
 
 {% endblock content %}
